--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
-body{
+*,
+*:before,
+*:after{
     padding: 0;
     margin: 0;
-    background-color: #fcf8bb;
+    box-sizing: border-box;
 }
-/* .container{
-
-} */
-
+body{
+    background-color: #e5e5fa;
+}
+.pulse{
+    height: 150px;
+    width: 150px;
+    background: linear-gradient(
+        #8a82fb,
+        #407ed7
+    );
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    
+}
