--- a/analog-clock/style.css
+++ b/analog-clock/style.css
@@ -25,7 +25,7 @@ body {
     box-shadow: 15px 15px 35px rgba(0,0,0,0.2),
     inset 0 0 30px rgba(0,0,0,0.4);
 }
-.clockimg{
+svg{
     margin: 10px;
     position: relative;
 }
